fix: update vehicle card styling for improved readability and consistency

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -59,7 +59,7 @@ body {
 .vehicle-header {
   font-weight: bold;
   color: #333;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .vehicle-info {
@@ -81,6 +81,7 @@ body {
   font-size: 12px;
   font-style: italic;
   font-weight: bold;
+  text-align: center;
 }
 .dark-mode .vehicle-info a {
   color: #ccc;
@@ -523,14 +524,5 @@ input:checked + .slider:before {
 .last-updated-sub{
   font-family: Arial, sans-serif;
   font-size: 12px;
-  margin-left: 18px;
-}
-
-.View-in-detail{
-  font-family: Arial, sans-serif;
-  font-size: 12px;
-  color: #336699;
-  text-decoration: none;
-  text-align: center;
-  align-items: center;
+  margin-left: 22px;
 }
